--- a/src/app/funcion/unit-funcion/unit-funcion.component.html
+++ b/src/app/funcion/unit-funcion/unit-funcion.component.html
@@ -1,4 +1,4 @@
-<br>
+<!-- <br>
 <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
   <div class=" form-group">
     <label for="hora">Hora</label><br>
@@ -20,8 +20,8 @@
     <button class="btn btn-primary" type="submit">
       <i class="fas fa-plus-circle"></i> Agregar o Actualizar
     </button>
-     <button class="btn btn-secondary" type="button" (click)="remove(productForm)">
-       <i class="fas fa-sync-alt"></i> Eliminar
-    </button> 
+    <button class="btn btn-secondary" type="reset" (click)="resetForm(productForm)">
+        <i class="fas fa-sync-alt"></i> Reset
+    </button>
   </div>
-</form>
+</form> -->
