--- a/src/app/funcion/unit-funcion/unit-funcion.component.html
+++ b/src/app/funcion/unit-funcion/unit-funcion.component.html
@@ -1,19 +1,24 @@
-<!-- <br>
+<br>
 <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
   <div class=" form-group">
-    <label for="hora">Hora</label><br>
-    <input type="text" class="form-control" name="hora" #hora="ngModel" [(ngModel)]="service.select.hora"
-        placeholder="Add A hora">
+    <label for="id">Id</label><br>
+    <input type="text" class="form-control" name="id" #hora="ngModel" [(ngModel)]="service.select.id"
+        placeholder="Add A id">
+  </div>
+  <div class=" form-group">
+    <label for="Fecha">Fecha</label><br>
+    <input type="text" class="form-control" name="Fecha" #hora="ngModel" [(ngModel)]="service.select.Fecha"
+        placeholder="Add A Fecha">
   </div>
   <div class="form-group">
-    <label for="valor">Valor</label><br>
-    <input type="text" class="form-control" name="valor" #valor="ngModel" [(ngModel)]="service.select.valor"
-      placeholder="Add A valor">
+    <label for="RFID">RFID</label><br>
+    <input type="text" class="form-control" name="RFID" #valor="ngModel" [(ngModel)]="service.select.RFID"
+      placeholder="Add A RFID">
   </div>
   <div class="form-group">
-    <label for="count">Count</label><br>
-    <input type="text" class="form-control" name="count" #count="ngModel" [(ngModel)]="service.select.count"
-      placeholder="Add A count">
+    <label for="Luz">Luz</label><br>
+    <input type="text" class="form-control" name="Luz" #count="ngModel" [(ngModel)]="service.select.Luz"
+      placeholder="Add A Luz">
   </div>
   <br>
   <div class="form-group">
@@ -24,4 +29,4 @@
         <i class="fas fa-sync-alt"></i> Reset
     </button>
   </div>
-</form> -->
+</form>
