creacion de persona y caja

--- a/src/app/funcion/funcion.component.html
+++ b/src/app/funcion/funcion.component.html
@@ -13,19 +13,19 @@
         <div class="circulo total">
           
           <h1>
-            <br>{{total}}</h1>
+            <br>{{entradas.total}}</h1>
         </div>
       </td>
       <td>
         <div class="circulo empleado">
           
-          <h1><br>{{empleados}}</h1>
+          <h1><br>{{entradas.empleados}}</h1>
         </div>
       </td>
       <td>
         <div class="circulo cliente">
          
-          <h1><br>{{clientes}}</h1>
+          <h1><br>{{entradas.clientes}}</h1>
         </div>
       </td>
     </tr>
