--- a/src/app/funcion/funcion.component.html
+++ b/src/app/funcion/funcion.component.html
@@ -10,10 +10,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" routerLink="dashboard">dashboard</a>
+          <a class="nav-link" >dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">registro</a>
+          <a class="nav-link" routerLink="/registro">registro</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
@@ -23,7 +23,9 @@
   </div>
 </nav>
 
-
+<input type="date" [(ngModel)]="fecha"  (change)="datosByFecha()">
+<button type="button"(click)="datosByFechaHoy()" > Hoy </button>
+fecha = {{fecha}}
 <table>
   <thead>
     <tr>
@@ -44,7 +46,7 @@
       <td>
         <div class="circulo empleado">
           
-          <h1><br>{{entradas.empleados}}</h1>
+          <h1>{{entradas.empleados}}</h1>
         </div>
       </td>
       <td>
