--- a/src/app/funcion/unit-funcion/unit-funcion.component.html
+++ b/src/app/funcion/unit-funcion/unit-funcion.component.html
@@ -1,4 +1,4 @@
-<br>
+<!-- <br>
 <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
   <div class=" form-group">
     <label for="id">Id</label><br>
@@ -29,4 +29,4 @@
         <i class="fas fa-sync-alt"></i> Reset
     </button>
   </div>
-</form>
+</form> -->
