--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,114 +1,129 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <!-- <li class="nav-item">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li> -->
-          <li class="nav-item">
-            <a class="nav-link" routerLink="dashboard">dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">registro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-      </div>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/dashboard">dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" >registro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="logout()">Log out</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 
 <div class="container">
-<form [formGroup]="formCliente">
-  <table class="table">
+  <h1>REGISTRAR EN CAJA</h1>
+  <form [formGroup]="formCliente">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Tarjeta</th>
+          <th>Tipo</th>
+          <th>Numero Identificacion</th>
+          <th>Direccion</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <select formControlName="tarjeta" class="form-select">
+              <option value="">Selecione</option>
+              <option *ngFor="let f of Tarjetas" [value]="f.key">{{f.key}}</option>
+            </select>
+          </td>
+          <td>
+            <select formControlName="tipoDocumento" class="form-select">
+              <option value="">Selecione</option>
+              <option value="TI">Tarjeta de Identidad</option>
+              <option value="CC">Cedula de Ciudadania</option>
+              <option value="PA">Pasaporte</option>
+              <option value="CE">Cedula de Extranjeria</option>
+            </select>
+          </td>
+          <td> <input type="text" formControlName="id" class="form-control" (blur)="buscar()"> </td>
+          <td> <input type="text" formControlName="direccion" class="form-control"> </td>
+          <td> <input type="text" formControlName="email" class="form-control"> </td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="table ">
+
+      <thead>
+        <tr>
+          <th>Fecha Nacimiento</th>
+          <th>Nombre</th>
+          <th>Telefono</th>
+          <th>Fraccion tiempo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td> <input type="date" formControlName="fechaNacimiento" class="form-control"> </td>
+          <td> <input type="text" formControlName="nombre" class="form-control"> </td>
+          <td> <input type="text" formControlName="telefono" class="form-control"> </td>
+          
+          <td> 
+            <select formControlName="fraccionTiempo" class="form-select">
+              <option value="">Selecione</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+            </select>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <td>
+      <button type="submit" (click)="guardar()">Agregar</button>
+    </td>
+  </form>
+  <br>
+  <table class="table table-bordered table-hover">
     <thead>
       <tr>
+        <th>Fecha</th>
         <th>Tarjeta</th>
-        <th>Numero Identificacion</th>
-        <th>Direccion</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <select formControlName="tarjeta" class="form-select">
-            <option value="">Selecione</option>
-            <option *ngFor="let f of Tarjetas" [value]="f.key">{{f.key}}</option>
-          </select>
-        </td>
-        <td> <input type="text" formControlName="id" class="form-control"> </td>
-        <td> <input type="text" formControlName="direccion" class="form-control"> </td>
-        <td> <input type="text" formControlName="email" class="form-control"> </td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="table ">
-    <thead>
-      <tr>
-        <th>Fecha Nacimiento</th>
+        <th>Identificacion</th>
+        <!-- <th>Direccion</th> -->
+        <!-- <th>Fecha Nacimiento</th> -->
         <th>Nombre</th>
         <th>Telefono</th>
-        <th>Tipo</th>
+        <th>Email</th>
+        <th>Fraccion Tiempo</th>
+        <!-- <th>Tipo</th> -->
+        <!-- <th>Acciones</th> -->
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td> <input type="date" formControlName="fechaNacimiento" class="form-control"> </td>
-        <td> <input type="text" formControlName="nombre" class="form-control"> </td>
-        <td> <input type="text" formControlName="telefono" class="form-control"> </td>
-        <td>
-          <select formControlName="tipoDocumento" class="form-select">
-            <option value="">Selecione</option>
-            <option value="TI">Tarjeta de Identidad</option>
-            <option value="CC">Cedula de Ciudadania</option>
-            <option value="PA">Pasaporte</option>
-            <option value="CE">Cedula de Extranjeria</option>
-          </select>
-        </td>
+      <tr *ngFor="let cliente of ClientesEnCaja">
+        <td>{{cliente.fecha}}</td>
+        <td>{{cliente.tarjeta}}</td>
+        <td>{{cliente.key}}</td>
+        <!-- <td>{{cliente.Direccion}}</td> -->
+        <!-- <td>{{cliente.FechaNacimiento}}</td> -->
+        <td>{{cliente.Nombre}}</td>
+        <td>{{cliente.Telefono}}</td>
+        <td>{{cliente.Email}}</td>
+        <td>{{cliente.fraccionTiempo}}</td>
+        <!-- <td>{{cliente.TipoDocumento}}</td> -->
       </tr>
-    </tbody>
   </table>
-  <td>
-    <button type="submit" (click)="guardar()">Agregar</button>
-  </td>
-</form>
-<br>
-<table class="table table-bordered table-hover">
-  <thead>
-    <tr>
-      <th>Tarjeta</th>
-      <th>Id</th>
-      <th>Direccion</th>
-      <th>Email</th>
-      <th>Fecha Nacimiento</th>
-      <th>Nombre</th>
-      <th>Telefono</th>
-      <th>Tipo</th>
-      <!-- <th>Acciones</th> -->
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let cliente of ClientesEnCaja">
-      <td>{{cliente.tarjeta}}</td>
-      <td>{{cliente.key}}</td>
-      <td>{{cliente.Direccion}}</td>
-      <td>{{cliente.Email}}</td>
-      <td>{{cliente.FechaNacimiento}}</td>
-      <td>{{cliente.Nombre}}</td>
-      <td>{{cliente.Telefono}}</td>
-      <td>{{cliente.TipoDocumento}}</td>
-      <!-- <td>
-                <button (click)="eliminar(cliente.key)">Eliminar</button>
-            </td> -->
-    </tr>
-</table>
 </div>
+{{formCliente.value | json}}
 
 <!-- <form [formGroup]="formCliente">
     
