--- a/src/app/tarjeta/tarjeta.component.html
+++ b/src/app/tarjeta/tarjeta.component.html
@@ -25,7 +25,7 @@
   </nav>
   
   <div class="container">
-      <h1>EMPLEADO</h1>
+      <h1>TARJETA</h1>
     <form [formGroup]="formTarjeta">
       <table class="table">
         <thead>
