--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -25,7 +25,7 @@
   </nav>
   
   <div class="container">
-      <h1>Clientes</h1>
+      <h1>CLIENTES</h1>
     <form [formGroup]="formCliente">
       <table class="table">
         <thead>
