--- a/src/app/funcion/funcion.component.html
+++ b/src/app/funcion/funcion.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav"> -->
         <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li> -->
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" >dashboard</a>
         </li>
         <li class="nav-item">
@@ -21,12 +21,43 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
 
-<input type="date" [(ngModel)]="fecha"  (change)="datosByFecha()">
-<button type="button"(click)="datosByFechaHoy()" > Hoy </button>
+<app-menu></app-menu>
+
+<br>
+<span class="container">
+<input type="date" [(ngModel)]="fecha"  (change)="datosByFecha()" class="form-control">
+<button type="button"(click)="datosByFechaHoy()" class="btn btn-primary" > Hoy </button>
 fecha = {{fecha}}
-<table>
+</span>
+
+<div class="container-as">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg text-end justify-content-end ms-auto">
+      </div>
+      <div class="col-lg justify-content-start">
+        <h1>Empleados</h1>
+        <div class="circuloU align-items-center">
+          <h1 style="top:35%;position:relative;margin-left:40%">{{entradas.empleados}}</h1>
+        </div>
+      </div>
+      <div class="col-lg text-start justify-content-start me-auto">
+        <h1>Clientes</h1>
+        <div class="circuloD align-items-center">
+          <h1 style="top:35%;position:relative;margin-left:40%">{{entradas.clientes}}</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="containerin">
+  <img class="text-end" src="../../assets/img/logo.jpeg" width="960" height="640">
+</div>
+<!-- </div> -->
+
+<!-- <table>
   <thead>
     <tr>
       <th><h2>Total</h2></th>
@@ -56,4 +87,4 @@ fecha = {{fecha}}
         </div>
       </td>
     </tr>
-</table>
+</table> -->
