--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,40 @@
-<p>menu works!</p>
+<!-- <nav>
+    <a class="animando" href="#">inicio</a>
+    <a class="animando" href="#">tan</a>
+    <a class="animando" href="#">tan2</a>
+    <a class="animando" href="#">tan3</a>
+    <a class="animando" href="#">tan4</a>
+    <a class="animando" href="#">tan5</a>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../../assets/img/logo.jpeg" alt="" width="50" height="50"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/dashboard">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/registro">Caja</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Configuraciones
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" routerLink="/cliente">Clientes</a></li>
+              <li><a class="dropdown-item" routerLink="/empleado">Empleados</a></li>
+              <li><a class="dropdown-item" routerLink="/tarjeta">Tarjetas</a></li>
+            </ul>
+          </li>
+          <li class="nav-item" >
+            <a class="nav-link" (click)="logout()">Log out</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
