correcion de tarjeta

--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -51,7 +51,7 @@
           <tr>
             <th>Nombre</th>
             <th>Telefono</th>
-            <th>Tipo</th>
+            <th>Tipo Identificacion</th>
           </tr>
         </thead>
         <tbody>
