--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -33,7 +33,7 @@
       <thead>
         <tr>
           <th>Tarjeta</th>
-          <th>Tipo</th>
+          <th>Tipo Identificacion</th>
           <th>Numero Identificacion</th>
           <th>Direccion</th>
           <th>Email</th>
