--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -58,7 +58,7 @@
           <tr>
             <th>Nombre</th>
             <th>Telefono</th>
-            <th>Tipo</th>
+            <th>Tipo Identificacion</th>
           </tr>
         </thead>
         <tbody>
