--- a/src/app/historial/historial.component.html
+++ b/src/app/historial/historial.component.html
@@ -7,8 +7,8 @@
     <br><hr>
     <div class="container">
         <h1 class="text-center">{{titulo}}</h1>
-        <span class="text-center">  Fecha : {{fecha}} </span>
-    <br>
+       <button (click)="ObtenerIngresos()" class="btn btn-primary">Ver</button>    <span class="text-center ms-4    ">  Fecha : {{fecha}} </span>
+    <br><br>
 <table class="table table-bordered text-center">
     <thead>
     <tr>
