--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -32,32 +32,13 @@
       <table class="table">
         <thead>
           <tr>
-            <th>Numero Identificacion</th>
-            <th>Direccion</th>
-            <th>Email</th>
+            <th> Tipo Identificacion</th>
+            <th> Numero Identificacion</th>
+            <th> Nombre </th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td> <input type="text" formControlName="id" class="form-control"> </td>
-            <td> <input type="text" formControlName="direccion" class="form-control"> </td>
-            <td> <input type="text" formControlName="email" class="form-control"> </td>
-          </tr>
-        </tbody>
-      </table>
-      <table class="table ">
-  
-        <thead>
-          <tr>
-            <th>Nombre</th>
-            <th>Telefono</th>
-            <th>Tipo Identificacion</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td> <input type="text" formControlName="nombre" class="form-control"> </td>
-            <td> <input type="text" formControlName="telefono" class="form-control"> </td>
             <td>
               <select formControlName="tipoDocumento" class="form-select">
                 <option value="">Selecione</option>
@@ -67,11 +48,32 @@
                 <option value="CE">Cedula de Extranjeria</option>
               </select>
             </td>
+            <td> <input type="number" formControlName="id" class="form-control"> </td>
+            <td> <input type="text" formControlName="nombre" class="form-control"> </td>
+          </tr>
+        </tbody>
+      </table>
+      <table class="table ">
+  
+        <thead>
+          <tr>
+            <th> Telefono </th>
+            <th>  Direccion </th>
+              <th>  Email </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            
+            <td> <input type="number" formControlName="telefono" class="form-control"> </td>
+            <td> <input type="text" formControlName="direccion" class="form-control"> </td>
+            <td> <input type="email" formControlName="email" class="form-control"> </td>
+            
           </tr>
         </tbody>
       </table>
       <td>
-        <button type="submit" (click)="guardar()">Agregar</button>
+        <button type="submit" (click)="guardar()" [disabled]="formCliente.invalid"  class="btn btn-success">Agregar</button>
       </td>
     </form>
     <br>
