--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -56,7 +56,7 @@
               <option value="CE">Cedula de Extranjeria</option>
             </select>
           </td>
-          <td> <input type="text" formControlName="id" class="form-control" (blur)="buscar()"> </td>
+          <td> <input type="number" formControlName="id" class="form-control" (blur)="buscar()"> </td>
           <td> <input type="text" formControlName="direccion" class="form-control"> </td>
           <td> <input type="text" formControlName="email" class="form-control"> </td>
         </tr>
@@ -76,7 +76,7 @@
         <tr>
           <td> <input type="date" formControlName="fechaNacimiento" class="form-control"> </td>
           <td> <input type="text" formControlName="nombre" class="form-control"> </td>
-          <td> <input type="text" formControlName="telefono" class="form-control"> </td>
+          <td> <input type="number" formControlName="telefono" class="form-control"> </td>
           
           <td> 
             <select formControlName="fraccionTiempo" class="form-select">
@@ -90,7 +90,7 @@
       </tbody>
     </table>
     <td>
-      <button type="submit" (click)="guardar()">Agregar</button>
+      <button type="submit" (click)="guardar()"  [disabled]="formCliente.invalid" class="btn btn-success">Agregar</button>
     </td>
   </form>
   <br>
